# T3Pay

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/config/: constants.ts  env.ts
backend/src/db/: supabase.ts
backend/src/domain/: errors.ts  ids.ts  money.ts  redaction.ts
backend/src/http/: register-routes.ts  router.ts  types.ts
backend/src/modules/: shared.ts
backend/supabase/: schema.sql
backend/supabase/migrations/: 20260620_adk_native_agents.sql  20260621_agent_vault_and_run_traces.sql  20260622_supabase_auth_users.sql
contracts/vaultpay/: Cargo.toml
contracts/vaultpay/src/: lib.rs  model.rs  vaultpay.rs
contracts/vaultpay/wit/: world.wit
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx  t3pay.css
frontend/src/hooks/: useStickToBottom.ts  useVaultPayApp.ts
frontend/src/lib/: agent-chat-types.ts  agent-utils.ts  api.ts  app-navigation.ts  asset-previews.ts  format.ts  marketplace.ts  mock-assets.ts  purchase-outcome.ts  run-utils.ts  session.ts  supabase.ts  toast.ts  types.ts  vault-funding.ts
issues/: bug-summary.md  t3n-kv-map-entry-set-and-contract-kv-put-500.md
scripts/: build-contracts.sh  contract-logs.mjs  create-mandate-probe.mjs  create-maps.mjs  e2e-api.mjs  e2e-frontend-routes.mjs  grant-agent.mjs  inspect-contract-wit.sh  invoke-contract-demo.mjs  map-smoke.mjs  register-contracts.mjs  seed-secrets.mjs  t3n-auth-check.mjs
scripts/lib/: env.mjs  t3n-client.mjs  t3n-kv.mjs
(+64 files in other folders)
